Ran FindBugs 1.3.3 on BTrace to find and fix the following correctness issues and performance issues:
* BTraceUtils.java - infinite loop in contains(Collection, Object) method.

* BTraceMBean.java - getAttribute(String) is dereferencing null object.
(wrong check in "if")

* InstrumentUtils.java - using bitwise operators with signed data.

* PCPP.java - unused variables "lineNumber", "out".

* PCPP.java - unused method print(char).

* PCPP.java - using new Boolean instead of Boolean.valueOf.
Ran FindBugs 1.3.3 on BTrace to find and fix the following correctness issues
and performance issues:

* BTraceUtils.java - infinite loop in contains(Collection, Object) method.

* BTraceMBean.java - getAttribute(String) is dereferencing null object.
(wrong check in "if")

* InstrumentUtils.java - using bitwise operators with signed data.

* PCPP.java - unused variables "lineNumber", "out".

* PCPP.java - unused method print(char).

* PCPP.java - using new Boolean instead of Boolean.valueOf.